styles.css
/* ------------------------------- 1. Global Styles -------------------------------- */
body {
    flex-basis: 1200px;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
    --main-heading-font-family: "Merriweather", sans-serf;
    --main-text-font-family: "Roboto", sans-serif;
    --standard-font-text-color: #0C0C0C;
}

/* ------------------------------- 2.START HEADER -------------------------------- */

.header {
    background: rgb(103, 86, 190);
    background: linear-gradient(90deg, rgba(103, 86, 190, 1) 0%,
    rgba(87, 34, 205, 1) 59%, rgba(72, 47, 175, 1) 100%);
    color: white;
    margin: 10px;
    position: relative;
    flex-shrink: 0;
    flex-grow: 1;
}

#nav-bar {
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    font-family: var(--main-text-font-family);
    padding-right: 30px;
    padding-top: 25px;
    flex-grow: 1;
    flex-shrink: 0;
}

ul {
    display: flex;
    list-style-type: none;
    flex-direction: row;
    justify-content: space-between;
    flex-basis: 300px;
}


.header-text {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 200px;
    text-align: center;

}

h1 {
    display: flex;
    justify-content: center;
    font-family: var(--main-heading-font-family);
    font-size: 50px;
    font-weight: lighter;
    padding-bottom: 40px;
}

p {
    font-family: var(--main-text-font-family);
    font-size: 20px;
    font-weight: lighter;
    padding-bottom: 30px;
}

button {
    font-family: var(--main-text-font-family);
    text-transform: uppercase;
    background-color: #ED4385;
    border: transparent;
    color: white;
    padding: 20px;
    border-radius: 30px;
    box-shadow: 2px 2px 10px #2f4f4f;
}

.squiggly-line-image {
    position: absolute;
    bottom: 0;
    left: calc(50% - 40px);
}

/* ------------------------------- 2. END HEADER -------------------------------- */


/* ------------------------------- 3. START MAIN -------------------------------- */

main {
    margin: 10px;
}

.section-introduction {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    background-color: #FFFFFF;
    color: #5722CD;
    font-family: var(--main-heading-font-family);
    font-size: 20px;
    padding-top: 40px;
    padding-left: 100px;
    padding-right: 100px;
}

h2 {
    padding: 20px 100px 20px 100px;
}

.introduction-link {
    display: flex;
    flex-direction: row;
    text-align: center;
    font-family: var(--main-text-font-family);
    font-size: 1px;
    color: var(--standard-font-text-color);
    padding-top: 150px;
    padding-bottom: 50px;

}

p {
    font-size: 15px;
}

a {
    font-size: 15px;
    text-decoration: none;
    color: #5722CD;
}

/*Styling SECTION PROJECTS*/

.content-container {
    background-color: #F3F6F9;
    color: var(--standard-font-text-color);

}

h3 {
    font-family: var(--main-heading-font-family);
    padding-bottom: 20px;
}

h5 {
    text-transform: uppercase;
    color: #5722CD;
    font-weight: bold;

}

p {
    font-family: var(--main-text-font-family);

}

.project-one  {
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-basis: 360px;

}
.first-article {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    flex-basis: 360px;
    padding-right: 100px;
    padding-left: 20px;
    flex-grow: 0;
    flex-shrink: 1;
}

.squiggle-line-purple {
    padding-bottom: 20px;
}

.image-one {
    width: 100%;
}

.image-wrapper {
    flex-basis: 800px;
    flex-grow: 0;
    flex-shrink: 1;
}


/*
All colors used throughout the text
Paars #5722CD;
Blauw #4845E4;
Roze #ED4385;
Zwart #0C0C0C (voor standaard tekst);
Lichtpaars #F2F0FF (voor de grote zwevende woorden, zoals "hello" en "services") Uitzonderingen:
Lichtgrijs #F3F6F9 (voor de achtergrond van de projecten)
Grijs #7A7A7A (voor de service-tegel tekst);
*/


/*////////////////////////
    Table of Contents
    1. Global Styles
    2. Typography
    3. Layout
        3.1 Reusables
        3.2 Other
    4. Areas
        4.1 Header
        4.2 Introduction
        etc.
    5. Media Queries
////////////////////////*/

/* ------------------------------- 1. Global Styles -------------------------------- */

/* ------------------------------- 2. Typography ----------------------------------- */

/* ------------------------------- 3. Layout --------------------------------------- */

/* --------------- 3.1 Reusables ----------------------- */

/* --------------- 3.2 Other --------------------------- */

/* ------------------------------- 4. Areas ---------------------------------------- */

/* --------------- 4.1 Header ------------------------- */

/* --------------- 4.2 Introduction ------------------- */

/* ------------------------------- 5. Media Queries -------------------------------- */

